--- a/docker-compose-mysql.yml
+++ b/docker-compose-mysql.yml
@@ -7,6 +7,7 @@ services:
         baseImageVersion: ${EVENTUATE_JAVA_BASE_IMAGE_VERSION?}
     ports:
       - "8081:8080"
+      - "4017:8000"
     depends_on:
       - mysql
       - kafka
@@ -22,6 +23,7 @@ services:
       SPRING_SLEUTH_ENABLED: "true"
       SPRING_SLEUTH_SAMPLER_PROBABILITY: 1
       SPRING_ZIPKIN_BASE_URL: http://zipkin:9411/
+      JAVA_OPTS: -agentlib:jdwp=transport=dt_socket,address=8000,server=y,suspend=n
 
   customerservice:
     build:
@@ -30,6 +32,7 @@ services:
         baseImageVersion: ${EVENTUATE_JAVA_BASE_IMAGE_VERSION?}
     ports:
       - "8082:8080"
+      - "4019:8000"
     depends_on:
       - mysql
       - kafka
@@ -45,6 +48,7 @@ services:
       SPRING_SLEUTH_ENABLED: "true"
       SPRING_SLEUTH_SAMPLER_PROBABILITY: 1
       SPRING_ZIPKIN_BASE_URL: http://zipkin:9411/
+      JAVA_OPTS: -agentlib:jdwp=transport=dt_socket,address=8000,server=y,suspend=n
 
   apigateway:
     build:
